# data-serializer

./: .gitignore  .travis.yml  LICENSE  README.md  data-serializer.cabal
src/Data/: Deserializer.hs  Serializer.hs
tests/: Tests.hs
