Name: data-serializer
Version: 0.1
Category: Data
Stability: experimental
Synopsis: Common API for serialization libraries
Description:
  This package provides a common API for serialization libraries like
  <http://hackage.haskell.org/package/binary binary> and
  <http://hackage.haskell.org/package/cereal cereal>.

Homepage: https://github.com/mvv/data-serializer
Bug-Reports: https://github.com/mvv/data-serializer/issues

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2016 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Extra-Source-Files:
  README.md

Cabal-Version: >= 1.10.0
Build-Type: Simple

Source-Repository head
  Type: git
  Location: https://github.com/mvv/data-serializer.git

Library
  Default-Language: Haskell2010
  Build-Depends: base >= 4.6 && < 5
               , bytestring >= 0.10.2
               , binary >= 0.7
               , cereal >= 0.5
               , data-endian >= 0.1.1
               , parsers >= 0.12.3
               , attoparsec >= 0.12.1.4
  Hs-Source-Dirs: src
  GHC-Options: -Wall
  Exposed-Modules:
    Data.Serializer
    Data.Deserializer
